# qitops-cli-tools

./: .gitignore  404.html  CHANGELOG.html  CHANGELOG.md  CONTRIBUTING.html  CONTRIBUTING.md  Cargo.toml  DISTRIBUTION.md  Dockerfile  GITHUB_PAGES.html  LICENSE  LICENSE.html  PUBLISHING.md  README.md  ROADMAP.html  ROADMAP.md  ai-features.html  api-testing.html  best-practices.html  book.toml  changelog.html  configuration.html  data-driven-testing.html  docker-compose.yml  download_model.sh  enhancement-ideas.html  improvement-suggestions.html  index.html  index.md#cicd-integration  index.md#data-driven-testing  instructions.txt  performance-testing.html  print.html  qitops_issues.json  roadmap.html  sample_test_results.json  searchindex.js  security-testing.html  test-configuration-generation.html  test-results-analysis.html  (+22 more)
.github/workflows/: ci.yml  docker.yml  docs.yml  publish.yml  release.yml
docs/: CONTRIBUTING.html  GITHUB_PAGES.md  LICENSE.md  SUMMARY.md  ai-features.md  api-collections.md  api-testing.md  best-practices.md  check_docs.sh  cicd-integration.md  configuration.md  custom.css  data-driven-testing.md  enhancement-ideas.md  improvement-suggestions.md  index.md  index.md#web-testing  installation.md  performance-testing.md  quick-start.md  security-testing.md  supported-llm-models.md  test-configuration-generation.md  test-results-analysis.md  testing-ai-features.md  usage.md  web-testing.md  why-qitops.md
docs/book/: GITHUB_PAGES.html  LICENSE.html  ROADMAP.html  ai-features.html  ai-features.md#improvement-suggestions  ai-features.md#supported-llm-models  api-collections.html  book.toml  changelog.html  cicd-integration.html  contributing.html  custom.js  data-driven-testing.html  find_problematic_files.sh  improvement-suggestions.html  index.html  index.md#ai-powered-features  index.md#api-collections  index.md#why-qitops  installation.html  print.html  quick-start.html  roadmap.html  searchindex.js  supported-llm-models.html  testing-ai-features.html  toc.html  toc.js  usage.html
homebrew/: qitops.rb
snap/: snapcraft.yaml
src/: Cargo.toml  Dockerfile  PROJECT_BOARD.md  README.md  ROADMAP.md  ai.rs  ai_compat.rs  api.rs  api_collection.rs  common.rs  data_driven.rs  docker-compose.yml  error.rs  lib.rs  main.rs  performance.rs  performance_enhanced.rs  reporting.rs  schema.rs  security.rs  web.rs
src/.github/workflows/: ci.yml  qitops-test.yml
src/ai/: legacy.rs  mod.rs  model.rs  web.rs
src/src/: api.rs  api_collection.rs  common.rs  data_driven.rs  error.rs  lib.rs  main.rs  perf.rs  performance.rs  performance_enhanced.rs  reporting.rs  schema.rs  sec.rs  web.rs
src/templates/github-actions/: README.md  all-tests.yml  api-test.yml  performance-test.yml  security-test.yml  web-test.yml
src/tests/: api_test.json  test_collection.sh  test_data_driven.sh  test_enhanced_performance.sh
src/tests/configs/: .env  ai_config.json  api_collection.json  api_test.json  data_driven_api_test.json  data_driven_collection.json  enhanced_performance_test.json  httpbin_collection.json  performance_test.json  security_test.json  web_test.json
src/tests/data/: products.json  users.csv
test_ollama/: Cargo.toml
test_ollama/src/: main.rs
tests/: ai_test.rs  offline_ai_test.sh
tests/configs/: api_collection.json  api_test.json  api_test_fail.json  data_driven.json  data_driven_api.json  data_driven_api_test.json  performance_enhanced.json  performance_enhanced_fixed.json  performance_test.json  security_test.json  simple_performance.json  web_test.json
tests/data/: users.csv
