[package]
name = "qitops"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Opperman <opperman.jonathan@gmail.com>"]
description = "Software Quality Assurance CLI for API, Performance, Security, and Web Testing"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/qitops/qitops-cli-tools"
repository = "https://github.com/qitops/qitops-cli-tools"
documentation = "https://github.com/qitops/qitops-cli-tools"
keywords = ["testing", "api", "performance", "security", "qa"]
categories = ["command-line-utilities", "development-tools::testing"]

[[bin]]
name = "qitops"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio-retry = "0.3"
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
jsonschema = "0.17"
rand = "0.8.5"
envsubst = "0.2"
dotenv = "0.15"
once_cell = "1.18"
regex = "1.10"
jsonpath_lib = "0.3"
csv = "1.2"
futures = "0.3"
tempfile = "3.10"

# Optional AI dependencies - these can be enabled with features
llama_cpp_rs = { version = "0.2.0", optional = true }
candle-core = { version = "0.3.3", optional = true, features = ["metal"] }
candle-transformers = { version = "0.3.3", optional = true }
half = { version = "2.3.1", optional = true }
rand_distr = { version = "0.4.3", optional = true }

[features]
default = []
ai = ["llama_cpp_rs", "candle-core", "candle-transformers", "half", "rand_distr"]

# We'll handle compatibility issues in the code instead of using patches
