[package]
name = "qitops"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
chrono = "0.4"
jsonschema = "0.17"
once_cell = "1.18"
tokio-retry = "0.3"
jsonpath_lib = "0.3"
envsubst = "0.2"
regex = "1.10"
csv = "1.2"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }

[features]
ai = []
ai-mock = []
ai-full = []
ai-cuda = []
ai-metal = []
web-testing-ai = []
