[package]
name = "qitops"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Software Quality Assurance CLI for API, Performance, Security, and Web Testing"

[[bin]]
name = "qitops"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
indicatif = "0.17"
futures = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
jsonschema = "0.17"
tokio-retry = "0.3"
rand = "0.8"
envsubst = "0.2"
dotenv = "0.15"
tempfile = "3.8"
once_cell = "1.18"
regex = "1.10.2"
jsonpath-lib = "0.3.0"

# Optional AI dependencies - these can be enabled with features
llama-cpp-rs = { version = "0.2", optional = true }
candle-core = { version = "0.3", optional = true }
candle-transformers = { version = "0.3", optional = true }

[features]
default = []
ai = ["llama-cpp-rs", "candle-core", "candle-transformers"]